--- a/index.html
+++ b/index.html
@@ -10,8 +10,56 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="navlogo">
+            <div class="navlogo border">
                 <div class="logo"></div>
+            </div>
+
+            <div class="nav-address border">
+                <p class="address1">Deliver to</p>
+                <div class="add-icon">
+                    <i><i class="fa-solid fa-location-dot"></i></i>
+                    <p class="address2">india</p>
+                </div>
+            </div>
+            <div class="nav-search">
+                <select class="search-select">
+                    <option >All</option>
+                </select>
+                <input placeholder="Search Amazon" class="search-input">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+
+            <div class="nav-signin border">
+                <p><span>Hello, Sign in</span></p>
+                <p class="nav-second">Account & Lists</p>
+            </div>
+
+            <div class="nav-return border">
+                <p><span>Rturns</span></p>
+                <p class="nav-second">& Orders</p>
+            </div>
+
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>                Cart
+            </div>
+        </div>
+
+        <div class="pannel">
+            <div class="pannel-all">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="pannel-option">
+                <p>Today's Deals</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+            <div class="pannel-deals">
+                Shop's deals in Electronics
             </div>
         </div>
     </header>
