--- a/index.html
+++ b/index.html
@@ -66,16 +66,72 @@
     
     <div class="hero-section">
         <div class="hero-msg">
-            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a>Click here to go to amazon.in</a></p>
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="https://www.amazon.com/">Click here to go to amazon.in</a></p>
         </div>
     </div>
 
     <div class="shop">
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
+        <div class="box1 box">
+           <div class="box-content">
+            <h2>Clothes and Fashion</h2>
+            <div class="box-image" style="background-image: url('images/box1_image.jpg');"></div>
+            <p><a>see more</a></p>
+           </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Health and Personal Care</h2>
+                <div class="box-image" style="background-image: url('images/box2_image.jpg');"></div>
+                <p><a>see more</a></p>
+               </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Furniture</h2>
+                <div class="box-image" style="background-image: url('images/box3_image.jpg');"></div>
+                <p><a>see more</a></p>
+               </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Electronics and Gadgets</h2>
+                <div class="box-image" style="background-image: url('images/box4_image.jpg');"></div>
+                <p><a>see more</a></p>
+               </div>
+        </div>
+        <div class="box5 box">
+            <div class="box-content">
+             <h2>Makeup and beauty</h2>
+             <div class="box-image" style="background-image: url('images/box5_image.jpg');"></div>
+             <p><a>see more</a></p>
+            </div>
+         </div>
+         <div class="box6 box">
+             <div class="box-content">
+                 <h2>Pet and Care</h2>
+                 <div class="box-image" style="background-image: url('images/box6_image.jpg');"></div>
+                 <p><a>see more</a></p>
+                </div>
+         </div>
+         <div class="box7 box">
+             <div class="box-content">
+                 <h2>New Arrival and toys</h2>
+                 <div class="box-image" style="background-image: url('images/box7_image.jpg');"></div>
+                 <p><a>see more</a></p>
+                </div>
+         </div>
+         <div class="box8 box">
+             <div class="box-content">
+                 <h2>Discover Fashion and trends</h2>
+                 <div class="box-image" style="background-image: url('images/box8_image.jpg');"></div>
+                 <p><a>see more</a></p>
+                </div>
+         </div>
 
     </div>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
